# Hisaab

./: .gitignore  README.md  TODO.md  axis.py  design.md  hdfc.py  icici.py  icici2.py  icici3.py  pyproject.toml
docs/plans/: 2026-02-15-hisaab-design.md  2026-02-16-hisaab-implementation.md
hisaab/: __init__.py  cli.py  config.py  models.py  rules.py  storage.py  transformer.py
hisaab/formatters/: beancount.py  ledger.py
hisaab/parser/: xls.py
hisaab/parsers/: __init__.py  axis.py  base.py  hdfc.py  icici.py  xls.py
tests/: __init__.py  test_cli.py  test_config.py  test_formatters.py  test_integration.py  test_models.py  test_parsers.py  test_rules.py  test_transformer.py
